bin/testsuite/tests/compiler/src/errors/compiler2718.swg
#global testerror "Err0381"

#test
{
    switch 4
    {
    }
}
